--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.5",
+    "@repo/common": "*",
     "@repo/db": "*",
     "@repo/store": "*",
     "@repo/ui": "*",
-    "@repo/common" : "*",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.7",
+    "svix": "^1.37.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
