--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -14,6 +14,7 @@
     "@repo/db": "*",
     "@repo/store": "*",
     "@repo/ui": "*",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "next": "14.2.15",
