--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,9 +8,9 @@
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
     "./Sidebar": "./src/Sidebar.tsx",
-    "./AddMoney" : "./src/addmoney.tsx",
-    "./Balance" : "./src/balance.tsx",
-    "./RecentTrans" : "./src/recentTrans.tsx"
+    "./AddMoney": "./src/addmoney.tsx",
+    "./Balance": "./src/balance.tsx",
+    "./RecentTrans": "./src/recentTrans.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -28,6 +28,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0"
   }
