--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "@repo/user-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@repo/common": "*",
     "@repo/db": "*",
     "@repo/store": "*",
@@ -17,6 +22,9 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "ngrok": "^5.0.0-beta.2",
@@ -24,6 +32,9 @@
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "svix": "^1.37.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
