--- a/apps/user-app/.eslintrc.json
+++ b/apps/user-app/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript"
+  ],
+  "rules": {
+    // Add the specific TypeScript rule here to disable it
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "off"
+    // Add more rules to disable as needed
+  },
 }
