--- a/apps/user-app/tsconfig.json
+++ b/apps/user-app/tsconfig.json
@@ -6,6 +6,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "noEmitOnError": false,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
