--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile.user
           push: true
-          tags: your-dockerhub-username/your-repo-name:latest
+          tags: paramveer01/paynext:latest
 
       - name: Verify Pushed Image
-        run: docker pull your-dockerhub-username/your-repo-name:latest
+        run: docker pull paramveer01/paynext:latest
