--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,3 +15,9 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm install
+
+      - name: Generate Prisma Client
+        run: npx prisma generate
+
+      - name: Run Build
+        run: npm run build
