added web-hook configrations

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Verify Pushed Image
         run: docker pull paramveer01/paynext:latest
-
+      # deploying to ec2 instance
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
