--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "db:generate": "cd packages/db && npx prisma generate && cd ../..",
-    "start-user-app" : "cd ./apps/user-app && npm run start"
+    "start-user-app": "cd ./apps/user-app && npm run start && cd../..",
+    "start": "concurrently \"cd ./apps/user-app && npm run start\" \"cd ./apps/bank-webhook && npm run start\""
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "prettier": "^3.2.5",
     "turbo": "^2.1.3",
     "typescript": "^5.4.5"
